Fixed z-index of toolbar and spell tooltips

--- a/app/assets/stylesheets/spells.css.scss
+++ b/app/assets/stylesheets/spells.css.scss
@@ -1,7 +1,7 @@
 .spell-tooltip {
   display: none;
   position: absolute;
-  z-index: 10000;
+  z-index: 100;
   width: 300px;
   background-color: red;
   border-radius: 8px;
