--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -6,6 +6,7 @@
   font-size: 28px;
   margin-right: 20px;
   background-color: #BBBBBB;
+  z-index: 50;
 
   a {
     height: 40px;
